[package]
authors = ["Nikko Kowalow <nikko@kowalow.com>"]
edition = "2018"
name = "smart-contract"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
byteorder = "1.4.2"
solana-program = "=1.5.8"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
thiserror = "1.0.21"
solana-clap-utils = "1.5.6"
solana-sdk = "1.5.6"
chrono = "0.4.19"

[features]
exclude_entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
