[package]
name = "smart-contract"
version = "0.1.0"
authors = ["Nikko Kowalow <nikko@kowalow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.5.8"
solana-program-test = "1.5.8"
byteorder = "1.4.2"

[features]
exclude_entrypoint = []